# MeitavAlternateView

./: .dockerignore  .gitignore  Dockerfile  README.md  Stock.py  TrendsPersist.py  app.py  config.json  config.json.example  download_static_assets.sh  healthcheck.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  static_deps.txt  test_Stock.py  test_app.py  yahoo_requestor.py
.github/workflows/: docker-image.yml  update_dependencies.yml
plans/: ui_deployment_improvement_plan.md
scripts/: sync-assets.js
src/meitav_view/: app.py  healthcheck.py  viewer.py
src/meitav_view/model/: config.py  stock.py
src/meitav_view/static/: 401.html  index.html
src/meitav_view/static/css/: main.css
src/meitav_view/static/favicon/: site.webmanifest
src/meitav_view/static/js/: edit-watchlist.js  table.js
src/meitav_view/utils/: auth_utils.py  trends_persist.py  yahoo_requestor.py
static/: 401.html  index.html
static/css/: main.css
static/js/: table.js  tableExport.min.js  trendschart.js
tests/: test_app.py
tests/model/: test_stock.py
