[project]
name = "meitav-view"
version = "2.0.0"
description = ""
authors = [{name = "Nicola Kalak", email ="nicolas12345@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "curl-cffi (>=0.13.0,<0.14.0)",
    "types-waitress (>=3.0.1.20250801,<4.0.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "pandas-stubs (>=2.3.2.250827,<3.0.0.0)"
]

[project.scripts]
meitav_view = "meitav_view.app:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=8.4.2,<9.0.0)",
]
lint = [
    "ruff (>=0.13.1)",
    "mypy (>=1.18.2,<2.0.0)"
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    "tox",
]

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["E", "F", "B", "I", "N"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-ra"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]